<resources>
    <string name="app_name">Layouts</string>
    <string name="about_me">About me</string>
    <string name="testdescription">testDescription</string>
    <string name="bio">Align the edge of a view to the same edge of another view. In figure 9,
        \n\nthe left side of B is aligned to the left side of A. If you want to align the view centers,
        \n\ncreate a constraint on both sides. You can offset the alignment by dragging the view inward from the constraint.
        For example, figure 10 shows B with a 24dp offset alignment. The offset is defined by the constrained view\'s margin.
        You can also select all the views you want to align, and then click Align in the toolbar to select the alignment type.

    Align the edge of a view to the same edge of another view. In figure 9,
        \n\nthe left side of B is aligned to the left side of A. If you want to align the view centers,
        \n\ncreate a constraint on both sides. You can offset the alignment by dragging the view inward from the constraint.
        For example, figure 10 shows B with a 24dp offset alignment. The offset is defined by the constrained view\'s margin.
        You can also select all the views you want to align, and then click Align in the toolbar to select the alignment type.

    Align the edge of a view to the same edge of another view. In figure 9,
        \n\nthe left side of B is aligned to the left side of A. If you want to align the view centers,
        \n\ncreate a constraint on both sides. You can offset the alignment by dragging the view inward from the constraint.
        For example, figure 10 shows B with a 24dp offset alignment. The offset is defined by the constrained view\'s margin.
        You can also select all the views you want to align, and then click Align in the toolbar to select the alignment type.
    </string>
    <string name="Anoutme_Placeholder">What \'s your name</string>
    <string name="AddButtonText">Add</string>
    <string name="hellow_world">Hellow world</string>
    <string name="squareTextView">TextView</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
</resources>